--- a/docs/main.css
+++ b/docs/main.css
@@ -155,6 +155,14 @@ body {
   background-color: var(--handle-point-background-color);
 }
 
+/* -----------------------------------------------------------------------------
+  Buffer
+----------------------------------------------------------------------------- */
+
+.BufferContainer {}
+
+.Buffer {}
+
 
 /* -----------------------------------------------------------------------------
   Console
