--- a/assets/main.css
+++ b/assets/main.css
@@ -106,8 +106,19 @@ body {
   }
 }
 
+.Point>.BeforeLeft {
+  width: calc(0.5 * var(--point--width));
+  margin-right: calc(-0.5 * var(--point--width));
+
+  background-color: transparent;
+
+  transition-property: background-color, box-shadow;
+  transition-duration: 0.2s;
+}
+
 .Point>.Left {
   width: calc(0.5 * var(--point--width));
+
   background-color: transparent;
 
   transition-property: background-color, box-shadow;
@@ -116,6 +127,17 @@ body {
 
 .Point>.Right {
   width: calc(0.5 * var(--point--width));
+
+  background-color: transparent;
+
+  transition-property: background-color, box-shadow;
+  transition-duration: 0.2s;
+}
+
+.Point>.AfterRight {
+  /* width: calc(0.3 * var(--point--width)); */
+  /* margin-left: calc(-0.3 * var(--point--width)); */
+
   background-color: transparent;
 
   transition-property: background-color, box-shadow;
@@ -214,6 +236,11 @@ body {
   >.Right {
     background-color: var(--handle-point--background-color);
     border-radius: var(--handle-point-inner-left--border-radius);
+  }
+
+  >.AfterRight {
+    background-color: var(--background-color);
+    border-radius: var(--handle-point-outer-left--border-radius);
   }
 
   &.HandleFocus>.Right {
