--- a/docs/main.css
+++ b/docs/main.css
@@ -104,58 +104,53 @@ body {
 
     background-color: transparent;
   }
+
+  >.Left {
+    width: calc(0.33 * var(--point--width));
+
+    background-color: transparent;
+
+    transition-property: background-color, box-shadow;
+    transition-duration: 0.2s;
+  }
+
+  >.Middle {
+    width: calc(0.33 * var(--point--width));
+
+    background-color: transparent;
+
+    transition-property: background-color, box-shadow;
+    transition-duration: 0.2s;
+  }
+
+  >.Right {
+    width: calc(0.33 * var(--point--width));
+
+    background-color: transparent;
+
+    transition-property: background-color, box-shadow;
+    transition-duration: 0.2s;
+  }
 }
 
-.Point>.BeforeLeft {
-  width: calc(0.5 * var(--point--width));
-  margin-right: calc(-0.5 * var(--point--width));
 
-  background-color: transparent;
-
-  transition-property: background-color, box-shadow;
-  transition-duration: 0.2s;
-}
-
-.Point>.Left {
-  width: calc(0.5 * var(--point--width));
-
-  background-color: transparent;
-
-  transition-property: background-color, box-shadow;
-  transition-duration: 0.2s;
-}
-
-.Point>.Right {
-  width: calc(0.5 * var(--point--width));
-
-  background-color: transparent;
-
-  transition-property: background-color, box-shadow;
-  transition-duration: 0.2s;
-}
-
-.Point>.AfterRight {
-  /* width: calc(0.3 * var(--point--width)); */
-  /* margin-left: calc(-0.3 * var(--point--width)); */
-
-  background-color: transparent;
-
-  transition-property: background-color, box-shadow;
-  transition-duration: 0.2s;
-}
 
 /* Point */
 
 .Point.Point_Handle {
-  >.Left {
+  /* >.Left {
     background-color: var(--handle-point-focus--background-color);
     box-shadow: calc(0.25 * var(--point--width)) 0 0 0 var(--background-color) inset;
+  } */
+
+  .Middle {
+    background-color: var(--handle-point-focus--background-color);
   }
 
-  >.Right {
+  /* >.Right {
     background-color: var(--handle-point-focus--background-color);
     box-shadow: calc(-0.25 * var(--point--width)) 0 0 0 var(--background-color) inset;
-  }
+  } */
 
   &.HandleFocus>.Focus {
     background-color: var(--handle-point-focus--background-color);
@@ -283,13 +278,17 @@ body {
 }
 
 .Point.ZipperH_Handle_InnerLeft.ZipperH_Handle_InnerRight {
-  >.Left {
+  /* >.Left {
     box-shadow: -0.1em 0 0 0 var(--background-color) inset;
-  }
+  } */
 
   &.HandleFocus>.Left {
     /* box-shadow: var(--handle-point-focus--box-shadow), -0.1em 0 0 0 var(--background-color) inset; */
     background-color: var(--handle-point-focus--background-color);
+  }
+
+  >.Middle {
+    background-color: var(--background-color);
   }
 
   &.HandleFocus.Right {
@@ -301,9 +300,9 @@ body {
     background-color: var(--handle-point-focus--background-color);
   }
 
-  >.Right {
+  /* >.Right {
     box-shadow: 0.1em 0 0 0 var(--background-color) inset;
-  }
+  } */
 }
 
 .Point.ZipperH_Handle_OuterRight {
