--- a/assets/main.css
+++ b/assets/main.css
@@ -59,8 +59,6 @@ body {
 .Expr.Inline {
   display: inline-flex;
   flex-direction: row;
-  /* align-items: center; */
-  /* justify-content: center; */
 }
 
 .Expr.Nested {
@@ -138,19 +136,10 @@ body {
 /* Point */
 
 .Point.Point_Handle {
-  /* >.Left {
-    background-color: var(--handle-point-focus--background-color);
-    box-shadow: calc(0.25 * var(--point--width)) 0 0 0 var(--background-color) inset;
-  } */
-
   .Middle {
+    box-shadow: var(--handle-point-focus--box-shadow);
     background-color: var(--handle-point-focus--background-color);
   }
-
-  /* >.Right {
-    background-color: var(--handle-point-focus--background-color);
-    box-shadow: calc(-0.25 * var(--point--width)) 0 0 0 var(--background-color) inset;
-  } */
 
   &.HandleFocus>.Focus {
     background-color: var(--handle-point-focus--background-color);
@@ -166,7 +155,7 @@ body {
   }
 
   &.HandleFocus>.Right {
-    /* box-shadow: var(--handle-point-focus--box-shadow); */
+    box-shadow: var(--handle-point-focus--box-shadow);
     background-color: var(--handle-point-focus--background-color);
   }
 
@@ -188,7 +177,7 @@ body {
   }
 
   &.HandleFocus>.Left {
-    /* box-shadow: var(--handle-point-focus--box-shadow); */
+    box-shadow: var(--handle-point-focus--box-shadow);
     background-color: var(--handle-point-focus--background-color);
   }
 
@@ -212,7 +201,7 @@ body {
   }
 
   &.HandleFocus>.Right {
-    /* box-shadow: var(--handle-point-focus--box-shadow); */
+    box-shadow: var(--handle-point-focus--box-shadow);
     background-color: var(--handle-point-focus--background-color);
   }
 
@@ -239,7 +228,7 @@ body {
   }
 
   &.HandleFocus>.Right {
-    /* box-shadow: var(--handle-point-focus--box-shadow); */
+    box-shadow: var(--handle-point-focus--box-shadow);
     background-color: var(--handle-point-focus--background-color);
   }
 
@@ -262,7 +251,7 @@ body {
   }
 
   &.HandleFocus>.Left {
-    /* box-shadow: var(--handle-point-focus--box-shadow); */
+    box-shadow: var(--handle-point-focus--box-shadow);
     background-color: var(--handle-point-focus--background-color);
   }
 
@@ -278,12 +267,8 @@ body {
 }
 
 .Point.ZipperH_Handle_InnerLeft.ZipperH_Handle_InnerRight {
-  /* >.Left {
-    box-shadow: -0.1em 0 0 0 var(--background-color) inset;
-  } */
-
   &.HandleFocus>.Left {
-    /* box-shadow: var(--handle-point-focus--box-shadow), -0.1em 0 0 0 var(--background-color) inset; */
+    box-shadow: var(--handle-point-focus--box-shadow);
     background-color: var(--handle-point-focus--background-color);
   }
 
@@ -291,18 +276,14 @@ body {
     background-color: var(--background-color);
   }
 
-  &.HandleFocus.Right {
-    /*  box-shadow: var(--handle-point-focus--box-shadow), 0.1em 0 0 0 var(--background-color) inset; */
+  &.HandleFocus>.Right {
+    box-shadow: var(--handle-point-focus--box-shadow);
     background-color: var(--handle-point-focus--background-color);
   }
 
   &.HandleFocus>.Focus {
     background-color: var(--handle-point-focus--background-color);
   }
-
-  /* >.Right {
-    box-shadow: 0.1em 0 0 0 var(--background-color) inset;
-  } */
 }
 
 .Point.ZipperH_Handle_OuterRight {
@@ -312,7 +293,7 @@ body {
   }
 
   &.HandleFocus>.Left {
-    /* box-shadow: var(--handle-point-focus--box-shadow); */
+    box-shadow: var(--handle-point-focus--box-shadow);
     background-color: var(--handle-point-focus--background-color);
   }
 
@@ -325,4 +306,9 @@ body {
   }
 
   background-color: transparent;
+}
+
+.Point>.Focus {
+  display: none;
+  visibility: hidden;
 }
