--- a/docs/App1/main.css
+++ b/docs/App1/main.css
@@ -1,7 +1,8 @@
 /* -------------------------------------------------------------------------- */
 
 :root {
-  --body--background: rgb(179, 175, 162);
+  /* --body--background: rgb(179, 175, 162); */
+  --body--background: rgb(252, 243, 213);
 }
 
 html,
