--- a/docs/App1/Editor.css
+++ b/docs/App1/Editor.css
@@ -26,6 +26,8 @@
   >.Expr.root {}
 
   .Expr {
+    padding: 0.5em;
+
     display: inline-flex;
     flex-direction: row;
     align-items: stretch;
