--- a/docs/App1/Editor.css
+++ b/docs/App1/Editor.css
@@ -26,7 +26,7 @@
   >.Expr.root {}
 
   .Expr {
-    padding: 0.5em;
+    /* padding: 0.5em; */
 
     display: inline-flex;
     flex-direction: row;
