open and close buffer

--- a/docs/App1/Editor.css
+++ b/docs/App1/Editor.css
@@ -37,8 +37,20 @@
   }
 
   .Point {
+    position: relative;
     display: flex;
     flex-direction: row;
+
+    >.Buffer {
+      position: fixed;
+      display: none;
+      visibility: hidden;
+
+      &.open {
+        display: block;
+        visibility: visible;
+      }
+    }
 
     >.Left,
     >.Middle,
